# swarm

./: .gitignore  README.md  analysis.md  dw.toml  pyproject.toml
docs/: adr-001-opencode-runtime.md
docs/superpowers/plans/: 2026-06-09-kimi-swarm-audit.md
docs/superpowers/specs/: 2026-06-09-kimi-swarm-audit-design.md
src/: __init__.py  cli.py  cost.py  engine.py  prompts.py  responses.py  runtimes.py  swarm.py
src/briefs/: __init__.py  audit.py  onboarding.py
src/tools/: __init__.py  advisory.py  repo.py  sast.py  search.py
tests/: __init__.py  test_advisory.py  test_briefs.py  test_cli.py  test_cost.py  test_engine.py  test_repo.py  test_responses.py  test_sast.py  test_search.py  test_swarm.py  test_tools.py
tests/fixtures/fakerepo/: README.md  app.py  util.py
