[project]
name = "kimi-swarm-audit"
version = "0.1.0"
description = "Kimi agent swarm code audit via Doubleword Open Responses API"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "openai>=1.99.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
kimi-swarm-audit = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
